[Clean] Return unmodifiable list when possible